<resources>
    <!--<string name="google_app_id">1:864671255405:android:a2abaedeea2783a3</string>-->
    <string name="app_name">Mokets</string>
    <string name="MAP_API_KEY">AIzaSyAa_qHvfvhtknJ3dmtHIWTMz4_3B-Phs2M</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_menu_change">Menu Change</string>
    <string name="no_data_available"> There is no data to display.</string>
    <string name="no_data_available_pull_to_refresh"> There is no data to display. Pull to refresh.</string>
    <string name="search_hint">Search here!</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone.</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_desc">Shop Description Here</string>
    <string name="shop_name">Shop Name</string>
    <string name="switch_shop">Switch Shop</string>
    <string name="home">Home</string>
    <string name="show_on_map">Show All On Map</string>
    <string name="search_keyword">Search By Keyword</string>
    <string name="profile">Profile</string>
    <string name="favourite_item">My Favourite Items</string>
    <string name="transaction">Transactions</string>
    <string name="favourite_shop">My Favourite Cities</string>
    <string name="logout">Logout</string>
    <string name="title_activity_selected_shop">SelectedShopActivity</string>
    <string name="display_name">Display Message</string>
    <string name="connection_error">Oops! App cannot connect to your server</string>
    <string name="title_activity_inquiry">InquiryActivity</string>
    <string name="select_shop">Please Select Shop</string>
    <string name="hello_world">Hello world!</string>
    <string name="inquiry">Inquiry</string>
    <string name="inquiry_message">Inquiry Message</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="agree">AGREE</string>
    <string name="disagree">DISAGREE</string>
    <string name="more_info">MORE INFO</string>

    <string name="choose_color">Choose Color</string>
    <string name="choose_size">Choose Size</string>
    <string name="location_search_title">1 Mile TO 50 Miles</string>
    <string name="search">Search</string>
    <string name="complete_address_title">Current Address</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="view_more_review">VIEW MORE REVIEWS</string>


    <string name="pls_wait">Please Wait</string>
    <string name="gps_not_ready">GPS is not ready to take your latitude and longitude. Please wait for a while to search.</string>
    <string name="sorry_title">Sorry</string>
    <string name="no_google_play">Your device not available Google Play Service. Please install it.</string>
    <string name="map_icon_desc">Image Description</string>

    <string name="inquiry_success">Your inquiry message has been submitted to system.</string>
    <string name="inquiry_fail">Unfortunately your inquiry message is not able to submit at this moment. Please try again later.</string>
    <string name="name_validation_message">Please fill the name.</string>
    <string name="email_validation_message">Please fill the email.</string>
    <string name="email_format_validation_message">Please check your email format.</string>
    <string name="inquiry_validation_message">Please fill the inquiry message.</string>

    <string name="no_review_count">Welcome for review</string>
    <string name="review">Review</string>
    <string name="review_list">Review List</string>
    <string name="reviews">Reviews</string>
    <string name="time_ago">times ago</string>
    <string name="add_first_review">Add First Review</string>
    <string name="add_new_review">Add New Review</string>
    <string name="ratings">Ratings</string>
    <string name="facebook_app_id">1678392172448037</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="paypal_login">Paypal Login</string>

    <string name="title_activity_review_list">ReviewListActivity</string>
    <string name="title_activity_user_login">UserLogin</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="password_validation_message">Please fill the password.</string>
    <string name="login_fail">Login not successful. Please try again later.</string>
    <string name="title_activity_review_entry">ReviewEntry</string>
    <string name="title_activity_user_register">UserRegister</string>

    <string name="title_activity_shop_info">ShopInfo</string>
    <string name="review_validation_message">Please fill the inquiry message.</string>
    <string name="review_success">Your review has been submitted to system.</string>
    <string name="review_fail">Unfortunately your review is not able to submit at this moment. Please try again later.</string>
    <string name="register_fail">Register not successful. Please try again later.</string>
    <string name="register_success">Congratulation, your account has been registered.</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="billing_address">BILLING ADDRESS</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">EDIT</string>
    <string name="title_activity_password_update">PasswordUpdateActivity</string>
    <string name="save">SAVE</string>
    <string name="password_change">Password Change</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="about_me">About Me</string>
    <string name="profile_edit_fail">Failed to update the profile.</string>
    <string name="password_not_equal">Password are not equal.</string>
    <string name="like">Like</string>
    <string name="like_fail">Oops! Unfortunately, it is not able to like this item.</string>
    <string name="like_need_auth">Sorry, You may need to login first.</string>
    <string name="img_desc">Image Description</string>
    <string name="title_activity_user_forgot_password">UserForgotPassword</string>
    <string name="forgot_message">Please provide your registered email for next instruction.</string>
    <string name="request">Request</string>
    <string name="share_message">Hey, this is very nice.</string>
    <string name="push_noti_setting">Push Notification Setting</string>
    <string name="notification_setting">Push Notification Setting</string>
    <string name="latest_message">Latest Message From System</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="explore_on_map">Explore On Map</string>
    <string name="news_list">News List</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="forgot_success">Your request has been submitted to system. Please take a look your email for the next instruction.</string>
    <string name="request_not_found">Requested resource not found</string>
    <string name="something_wrong">Something went wrong at server end</string>
    <string name="cannot_connect">Oops! Cannot connect to Internet or remote server is not up and running</string>
    <string name="rating_fail">Your rating could not submit to system. Please try again.</string>
    <string name="login_required">You may need to login first.</string>
    <string name="first_rating">Welcome for first rating</string>
    <string name="service_not_available">GCM Service is not available</string>
    <string name="gcm_register_success">Push Notification registered successfully.</string>
    <string name="gcm_register_not_success">Sorry, Push Notification could not submit.</string>
    <string name="gcm_unregister_success">Push Notification unregistered successfully.</string>
    <string name="photo_upload_success">Profile photo is uploaded successfully.</string>
    <string name="photo_upload_not_success">Sorry, profile photo could not upload.</string>

    <string name="json_status_success">success</string>
    <string name="json_status_error">error</string>
    <string name="location">Location</string>
    <string name="about_shop">About Shop</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="search_result">Search Results</string>
    <string name="search_shop_label">Selected Shop :</string>
    <string name="search_keyword_label">Keyword :</string>
    <string name="banner_ad_unit_id">ca-app-pub-6414469769989507/6549753073</string>

    <string name="price">Price :</string>
    <string name="qty">QTY :</string>
    <string name="available_attribute">Available Different Attribute</string>
    <string name="qty_required">Please provide for QTY.</string>
    <string name="discount_available">(Discount Available)</string>
    <string name="qty_different_required">Please provide different QTY.</string>
    <string name="title_activity_basket">Basket</string>
    <string name="sub_total">Sub Total :</string>
    <string name="total_amount">Total Amount : </string>
    <string name="transaction_status">Status : </string>
    <string name="transaction_id">Transaction No : </string>
    <string name="title_payment_option">Payment Options</string>
    <string name="stripe">Stripe</string>
    <string name="cod">Cash On Delivery</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="stripe_desc">You could checkout by using Stripe.</string>
    <string name="bank_desc">You could checkout by using Bank Transfer.</string>
    <string name="cod_desc">You could checkout by using Cash On Delivery.</string>
    <string name="go">GO</string>
    <string name="title_checkout_confirm">Checkout Confirmation</string>
    <string name="order_title">Order Total Amount</string>
    <string name="selected_payment_option">Selected Payment Option</string>
    <string name="user_information">User Information</string>
    <string name="phone">Phone No</string>
    <string name="confirm_checkout">Yes, I am confirm for checkout.</string>
    <string name="title_stripe">Card Information</string>
    <string name="stripe_pay">Pay</string>
    <string name="order_submit_title">Order</string>
    <string name="order_success">Order has been submitted successfully.</string>
    <string name="order_fail">Sorry, order cannot submit to server. Please try again later.</string>
    <string name="shop_info">Shop Information</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="transaction_phone">Phone : </string>
    <string name="transaction_email">Email : </string>
    <string name="transaction_billing_address">Billing Address : </string>
    <string name="transaction_deliver_address">Delivery Address : </string>
    <string name="transaction_item_name">Item Name : </string>
    <string name="transaction_item_price">Item Price : </string>
    <string name="transaction_qty">Quantity : </string>
    <string name="transaction_history">Transactions History</string>
    <string name="cart_empty">Your cart is empty.</string>
    <string name="selected_attribute">Selected Attribute</string>

</resources>
