<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/group_before_login">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search_keyword"
            android:icon="@drawable/ic_search"
            android:title="@string/search_keyword" />
        <item
            android:id="@+id/nav_push_noti"
            android:icon="@drawable/ic_notifications_white"
            android:title="@string/push_noti_setting" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_after_login" android:visible="false">
        <item
            android:id="@+id/nav_home_login"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search_keyword_login"
            android:icon="@drawable/ic_search"
            android:title="@string/search_keyword" />
        <item
            android:id="@+id/nav_push_noti_login"
            android:icon="@drawable/ic_notifications_white"
            android:title="@string/push_noti_setting" />
        <item
            android:id="@+id/nav_profile_login"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_transaction_white"
            android:title="@string/transaction_history" />
        <item
            android:id="@+id/nav_favourite_item_login"
            android:icon="@drawable/ic_favorite_white"
            android:title="@string/favourite_item" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_white"
            android:title="@string/logout" />
    </group>



</menu>
