<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    tools:context="com.panaceasoft.mokets.fragments.UserLoginFragment">

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:hint="@string/email"
            android:lines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2">
        <EditText
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:hint="@string/password"
            android:lines="1"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doLogin"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doForgot"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doRegister"
        android:text="@string/register"
        android:textColor="@android:color/white" />

</LinearLayout>


