<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_forgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.panaceasoft.mokets.fragments.UserForgotPasswordFragment">

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />


    <TextView
        android:id="@+id/txt_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sub_head"
        android:paddingLeft="@dimen/space_mini_2"
        android:paddingRight="@dimen/space_mini_2"
        android:paddingTop="@dimen/space_2"
        android:text="@string/forgot_message"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:hint="@string/email"
            android:lines="1" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doRequest"
        android:text="@string/request"
        android:textColor="@android:color/white" />

    <Button
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_cancel"
        android:text="@string/CANCEL"
        />

</LinearLayout>


