<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.panaceasoft.mokets.fragments.SearchFragment">

    <LinearLayout
        android:layout_marginTop="@dimen/space_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/choose_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2">

            <EditText
                android:id="@+id/input_search"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_5"
                android:hint="@string/search_keyword"
                android:lines="1"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_search"
            android:text="@string/search"
            android:onClick="doSearch"/>

        <include layout="@layout/ui_line"/>



        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_marginTop="@dimen/space_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>


</FrameLayout>
